--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,9 @@
 $color_purple: rgb(111, 20, 237);
 $color_green: #019980;
 $color_green_dark: #005648;
-$color_proteins: rgb(247, 239, 207);
-$color_carbs: rgb(215, 249, 243);
-$color_fats: rgb(246, 223, 246);
+$color_proteins: rgb(171, 247, 223);
+$color_carbs: rgb(199, 251, 234);
+$color_fats: rgb(230, 251, 244);
 
 *{
     margin: 0;
@@ -117,12 +117,14 @@ footer{
     }
     .result{
         padding: 5%;
+        background-color: transparent;
         .resultList{
             position: relative;
             left: auto;
             top: auto;
             background-color: white;
             text-align: start;
+            background-color: transparent;
         }
     }
     .row__recipes{
@@ -219,16 +221,10 @@ footer{
        margin: 0;
     }
     .nutriInfo{
-        margin: 3% auto;
-        padding: 5%;
-        h1{
-            margin-bottom:15px;
-            padding: 7px;
-            text-align: center;
-            font-size: 3rem;
-        }
-        p{
-            margin-bottom: 5%;
+        margin: 5px;
+        padding: 0;
+        img{
+            display: none;
         }
     }
     .info{
